# acetep

./: .gitignore  README.md  lirik.txt  lirik2.txt  lirik3.txt  lirik4.txt  lirik_kpop.txt  plan.md  pyproject.toml  song.py  test.sh
acegen/: README.md  cli.py  generate.py
acegen/docs/: catatan-perbaikan.md
test_output/: PROMPT_TESTS.txt  README.txt
